@startuml 图4-4 权限校验类图
skinparam backgroundColor #FFFFFF
skinparam defaultFontColor #000000

class AuthFilter {
  - ignoreWhite: IgnoreWhiteProperties
  - redisService: RedisService
  --
  + filter(exchange, chain): Mono<Void>
  - getToken(request): String
  - unauthorizedResponse(exchange, msg): Mono<Void>
  + getOrder(): int
}

class PreAuthorizeAspect {
  + doBefore(point): void
}

class DataScopeAspect {
  + dataScope(point): void
}

class InnerAuthAspect {
  + innerAuth(point): void
}

class LogAspect {
  + doAfterReturning(point): void
}

class SecurityUtils {
  + {static} getUserId(): Long
  + {static} getUsername(): String
  + {static} getUserKey(): String
  + {static} isAdmin(userId): boolean
}

class SecurityContextHolder {
  - THREAD_LOCAL: TransmittableThreadLocal
  --
  + setLoginUser(user): void
  + getLoginUser(): LoginUser
  + remove(): void
}

class LoginUser {
  - userId: Long
  - username: String
  - userKey: String
  - permissions: Set<String>
  - roles: Set<String>
  - deptId: Long
  - dataScope: String
}

annotation RequiresPermissions {
  + value(): String
}

annotation DataScope {
  + deptAlias(): String
  + userAlias(): String
}

annotation InnerAuth {
}

annotation Log {
  + title(): String
  + businessType(): BusinessType
}

AuthFilter --> Redis : 验证令牌
PreAuthorizeAspect ..> RequiresPermissions : 校验
PreAuthorizeAspect ..> SecurityUtils : 获取权限
DataScopeAspect ..> DataScope : 注入SQL
DataScopeAspect ..> SecurityContextHolder : 获取用户
InnerAuthAspect ..> InnerAuth : 校验内部调用
LogAspect ..> Log : 记录操作
SecurityContextHolder --> LoginUser : 持有
SecurityUtils ..> SecurityContextHolder : 读取

note right of AuthFilter
  执行顺序: -200
  优先级高于所有业务过滤器
end note

note right of DataScopeAspect
  注入 params.dataScope
  MyBatis XML: ${params.dataScope}
  五级: 全部/自定义/本部门/
  本部门及以下/仅本人
end note

@enduml
